# diagtool

./: Cargo.toml  README.md
.circleci/: config.yml
src/: errors.rs  lib.rs
src/model/: mod.rs  newmodel.rs  visual.rs
src/parser/: mod.rs
src/renderer/: mod.rs
src/solver/: fontmetrics.rs  lpsolver.rs  mod.rs
