[package]
name = "diagtool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bumpalo = "3.11.0"
freetype-rs = "0.31.0"
good_lp = "1.3.2"
svg = "0.12.0"
thiserror = "1.0.37"
typemap_rev = "0.2.0"
